# fastapi

./: README.md
first_project/: pyproject.toml
first_project/first_project/: main.py
helloworld/: Dockerfile  pyproject.toml
helloworld/helloworld/: main.py
project3/: Dockerfile  pyproject.toml  query.py
project3/project3/: main.py
simple-api/: main.py
streamlit/: fastapi.py  pyproject.toml  requirements.txt  streamlit.py  vercel.json
