[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["lakhwera001 <abubakarkhanlakhwara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
mypy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
