[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["lakhwera001 <abubakarkhanlakhwara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.0"
requests = "^2.32.3"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
