[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["lakhwera001 <abubakarkhanlakhwara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.32.2"
httpie = "^3.2.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
